broke up the controllers into separate files

--- a/views/partials/newTodo.jade
+++ b/views/partials/newTodo.jade
@@ -1,5 +1,5 @@
 a(href='/') Show all tasks
-h1 Show All tasks
+h1 Show All tasks {{message}}
 
 form#todoForm(method='POST', action='/')
   .formfield
