--- a/views/partials/partial1.jade
+++ b/views/partials/partial1.jade
@@ -1,5 +1,5 @@
 
-h1 Login to create tasks and save
+h1 Login to create tasks and save {{message}}
 form(method='POST', action='/api/register', id='registerForm')
   .formfield
     .formfield--prompt Username:
