--- a/views/partials/partial2.jade
+++ b/views/partials/partial2.jade
@@ -1,5 +1,5 @@
 
-h1 Register to create tasks
+h1 Register to create tasks {{message}}
 form(method='POST', action='/api/login', id='registerForm')
   .formfield
     .formfield--prompt Username:
