--- a/views/layout.jade
+++ b/views/layout.jade
@@ -16,3 +16,7 @@ html(ng-app="myApp")
   script(src='js/filters.js')
   script(src='js/directives.js')
   script(src='bower_components/jquery/dist/jquery.min.js')
+  script(src='js/controllers/registerctrl.js')
+  script(src='js/controllers/loginctrl.js')  
+  script(src='js/controllers/todolistctrl.js')
+  script(src='js/controllers/newTodo.js')
