register and login working

--- a/views/partials/newTodo.jade
+++ b/views/partials/newTodo.jade
@@ -1,4 +1,4 @@
-a(href='/') Show all tasks
+a(href='/todoHome') Show all tasks
 h1 Show All tasks {{message}}
 
 form#todoForm(method='POST', action='/')
