--- a/views/partials/partial1.jade
+++ b/views/partials/partial1.jade
@@ -1,11 +1,11 @@
 
 h1 Login to create tasks and save {{message}}
-form(method='POST', action='/api/register', id='registerForm')
+form(method='POST', novalidate, id='loginForm', name='userForm')
   .formfield
     .formfield--prompt Username:
-    input#username(type='text', name='username')
+    input#username(type='text', name='username', ng-model='user.username')
   .formfield
     .formfield--prompt Password:
-    input#password(type='password', name='password')
+    input#password(type='password', name='password', ng-model='user.password')
     br
-    input.submitButton(type='submit')
+    input.submitButton(type='submit', ng-click='login()')
