--- a/views/partials/partial2.jade
+++ b/views/partials/partial2.jade
@@ -1,11 +1,11 @@
 
 h1 Register to create tasks {{message}}
-form(method='POST', action='/api/login', id='registerForm')
+form(role='form', novalidate, name='userForm', id='registerForm')
   .formfield
     .formfield--prompt Username:
-    input#username(type='text', name='username')
+    input#username(type='text', name='username', ng-model='user.username', required, autofocus, ng-minlength='4')
   .formfield
     .formfield--prompt Password:
-    input#password(type='password', name='password')
+    input#password(type='password', name='password', ng-model='user.password', required, ng-minlength='4')
     br
-    input.submitButton(type='submit')
+    input.submitButton(type='submit', ng-show='userForm.$valid', ng-click='register()')
