--- a/views/layout.jade
+++ b/views/layout.jade
@@ -20,3 +20,4 @@ html(ng-app="myApp")
   script(src='js/controllers/loginctrl.js')  
   script(src='js/controllers/todolistctrl.js')
   script(src='js/controllers/newTodo.js')
+  script(src='js/controllers/NavCtrl.js')
