added services and enabled edit form with data inside

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -21,3 +21,5 @@ html(ng-app="myApp")
   script(src='js/controllers/todolistctrl.js')
   script(src='js/controllers/newTodo.js')
   script(src='js/controllers/NavCtrl.js')
+  script(src='js/controllers/editTodo.js')
+  script(src='js/services/sharedTask.js')
