working on Edit code, and fixed bug with the create controller

--- a/views/partials/editItem.jade
+++ b/views/partials/editItem.jade
@@ -17,5 +17,5 @@ form#todoForm(name='taskForm')
   .formfield
     .formfield--prompt Completed?
     input#todoTitle(type='checkbox', name='complete', ng-model= 'task.complete')
-    input#todoHidden(type='hidden', ng-model='task._id')
-  input.submitButton(type='submit', ng-click='editTask()')
+    input#todoHidden(type='hidden', ng-model='task.id')
+  input.submitButton(type='submit', ng-click='updateTask()')
