--- a/views/partials/editItem.jade
+++ b/views/partials/editItem.jade
@@ -1,5 +1,5 @@
-a(href='/todoHome') Show all tasks
-h1 Show All tasks {{message}}
+
+h1.editMsg {{message}}
 
 form#todoForm(name='taskForm')
   .formfield
