--- a/views/partials/todoHome.jade
+++ b/views/partials/todoHome.jade
@@ -1,11 +1,12 @@
-h1 {{message}}
-a(href='/newTodo') Create a new task
+h2 {{message}}
 
 .list(ng-repeat= 'thing in things')
   .title Title: {{thing.title}}
   .description Description: {{thing.description}}
   .priority Priority: {{thing.priority}}
   .dueDate Due Date: {{thing.due_date}}
+  .completed(ng-show='thing.complete') Status: Done! 
+  .completed(ng-show='!thing.complete') Status: Incomplete
   .actions
     a.deleteButtton(ng-click='delete(thing._id)') Delete  
     a.editButton(ng-click='edit(thing._id)') Edit
