--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,6 +6,7 @@ html(ng-app="myApp")
     title Angular Express Seed App
     link(rel='stylesheet', href='/css/app.css')
     link(rel='stylesheet', href='/bower_components/bootstrap/dist/css/bootstrap.min.css')
+    link(href='http://fonts.googleapis.com/css?family=Cabin+Sketch', rel='stylesheet', type='text/css')
   body
     block body
 
