--- a/views/partials/todoHome.jade
+++ b/views/partials/todoHome.jade
@@ -1,14 +1,14 @@
 h2 {{message}}
 
 .list(ng-repeat= 'thing in things')
-  .title Title: {{thing.title}}
-  .description Description: {{thing.description}}
-  .priority Priority: {{thing.priority}}
-  .dueDate Due Date: {{thing.due_date}}
-  .completed(ng-show='thing.complete') Status: Done! 
-  .completed(ng-show='!thing.complete') Status: Incomplete
-  .actions
+  .title.listItems Title: {{thing.title}}
+  .description.listItems Description: {{thing.description}}
+  .priority.listItems Priority: {{thing.priority}}
+  .dueDate.listItems Due Date: {{thing.due_date}}
+  .completed.listItems(ng-show='thing.complete') Status: Done! 
+  .completed.listItems(ng-show='!thing.complete') Status: Incomplete
+  .actions.listItems
     a.deleteButtton(ng-click='delete(thing._id)') Delete  
-    a.editButton(ng-click='edit(thing._id)') Edit
+    a.editButton(ng-click='edit(thing._id)') Edit  
 
 
